2017-10-24  Bruno Haible  <bruno@clisp.org>

	Fix the error message of TRUENAME on a nonexistent file.
	* pathname.d (my_realpath): Define always.
	(realpath_is_my_realpath): New macro.
	(realpath_obj): Invoke realpath, then my_realpath in case of error
	ENOENT.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Fix an endless recursion during "make check" on AIX.
	* stream.d (IS_EINVAL_EXTRA): On AIX, include the ENODEV errors.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Fix a "make check" hang on AIX.
	* makemake.in (check-script): Work around an AIX peculiarity.

2017-10-23  Bruno Haible  <bruno@clisp.org>

	Make intparam.c compile with g++ >= 6.
	Reported by Sam Steingold at <https://sourceforge.net/p/clisp/bugs/709>.
	* intparam.c (main9, get_stack_direction): Don't use the C keyword
	'auto'.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Avoid link errors when passing -DNO_ARI_ASM or -DNO_SP_ASM in CPPFLAGS.
	* makemake.in (ARI_ASMD, ARI_ASMS): Test whether XCFLAGS or XCPPFLAGS
	contains -DNO_ARI_ASM. Don't test for --enable-portability directly.
	(SP_ASMS, SP_ASMD): Test whether XCFLAGS or XCPPFLAGS contains
	-DNO_SP_ASM. Don't test for --enable-portability directly.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Improve decision whether to use symbolflags or not.
	* lispbibl.d (oint_symbolflags_shift, NO_symbolflags): Define depending
	on sizeof_symbol_is_multiple_of_varobject_alignment and alignment_long.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Improve decision whether to require varobject_alignment for symbols.
	* lispbibl.d (MAP_MEMORY_TABLES): Move up.
	(varobject_alignment): Add comment.
	(sizeof_symbol_is_multiple_of_varobject_alignment): New macro.
	(symbol_): Add filler word if necessary to ensure appropriate size.
	Define 'symbol_has_symfiller' if so.
	* constsym.d (LISPSYM_B): Test 'symbol_has_symfiller'. Define through
	auxiliary macros SYM_VAROBJECT_HEADER_INIT1, SYM_VAROBJECT_HEADER_INIT2,
	SYM_SYMFILLER_INIT, SYM_TLS_INDEX_INIT.
