@@ -3012,12 +3012,19 @@ if [ $CROSS = false ] ; then
       echotab "\$(RM) script.lisp; nohup \$(RUN) -q -M lispinit.mem -x 42 2>&1 > script.lisp; output_last_line=\`sed -n -e '\$\$p' script.lisp ${TRCR}\`; test \"\$\$output_last_line\" = 42 || exit 1 "
       ;;
   esac
+  echotab "\$(RM) script.lisp"
   RAISE='(setq *error-output* *standard-output*) (error "myerror")'
   echotab "output=\"\`\$(RUN) -q -M lispinit.mem -x '(progn ${RAISE})' ${TRCR}\`\"; test \"\$\$output\" = '*** - myerror' || exit 1"
   echotab "if \$(RUN) -q -M lispinit.mem -x '(progn ${RAISE})'; then exit 1; fi"
-  echotab "\$(RUN) -q -M lispinit.mem -x '(truename (make-stream :output))'"
-  echotab "\$(RUN) -q -M lispinit.mem -x '(truename (make-stream :output))'|cat"
-  echotab "\$(RM) script.lisp"
+  case "$host_os" in
+    aix* | hpux*)
+      # On these platforms, there is no /dev/fd/1.
+      ;;
+    *)
+      echotab "\$(RUN) -q -M lispinit.mem -x '(truename (make-stream :output))'"
+      echotab "\$(RUN) -q -M lispinit.mem -x '(truename (make-stream :output))'|cat"
+      ;;
+  esac
   echol
 
   echol "check-tests : ${TESTSDIR} lisp${LEXE} lispinit.mem"
